controller-tools: generate manifests

--- a/bootstrap/kubeadm/config/crd/bases/bootstrap.cluster.x-k8s.io_kubeadmconfigtemplates.yaml
+++ b/bootstrap/kubeadm/config/crd/bases/bootstrap.cluster.x-k8s.io_kubeadmconfigtemplates.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.15.0
+    controller-gen.kubebuilder.io/version: v0.15.1-0.20240618033008-7824932b0cab
   name: kubeadmconfigtemplates.bootstrap.cluster.x-k8s.io
 spec:
   group: bootstrap.cluster.x-k8s.io
@@ -22,7 +22,6 @@ spec:
       openAPIV3Schema:
         description: |-
           KubeadmConfigTemplate is the Schema for the kubeadmconfigtemplates API.
-
 
           Deprecated: This type will be removed in one of the next releases.
         properties:
@@ -73,7 +72,6 @@ spec:
                                   type: string
                                 description: |-
                                   ExtraArgs is an extra set of flags to pass to the control plane component.
-                                  TODO: This is temporary and ideally we would like to switch all components to
                                   use ComponentConfig + ConfigMaps.
                                 type: object
                               extraVolumes:
@@ -154,7 +152,6 @@ spec:
                                   type: string
                                 description: |-
                                   ExtraArgs is an extra set of flags to pass to the control plane component.
-                                  TODO: This is temporary and ideally we would like to switch all components to
                                   use ComponentConfig + ConfigMaps.
                                 type: object
                               extraVolumes:
@@ -345,7 +342,6 @@ spec:
                                   type: string
                                 description: |-
                                   ExtraArgs is an extra set of flags to pass to the control plane component.
-                                  TODO: This is temporary and ideally we would like to switch all components to
                                   use ComponentConfig + ConfigMaps.
                                 type: object
                               extraVolumes:
@@ -702,7 +698,6 @@ spec:
                               CACertPath is the path to the SSL certificate authority used to
                               secure comunications between node and control-plane.
                               Defaults to "/etc/kubernetes/pki/ca.crt".
-                              TODO: revisit when there is defaulting from k/k
                             type: string
                           controlPlane:
                             description: |-
@@ -730,9 +725,8 @@ spec:
                                 type: object
                             type: object
                           discovery:
-                            description: |-
-                              Discovery specifies the options for the kubelet to use during the TLS Bootstrap process
-                              TODO: revisit when there is defaulting from k/k
+                            description: Discovery specifies the options for the kubelet
+                              to use during the TLS Bootstrap process
                             properties:
                               bootstrapToken:
                                 description: |-
@@ -793,7 +787,6 @@ spec:
                                   TLSBootstrapToken is a token used for TLS bootstrapping.
                                   If .BootstrapToken is set, this field is defaulted to .BootstrapToken.Token, but can be overridden.
                                   If .File is set, this field **must be set** in case the KubeConfigFile does not contain any other authentication information
-                                  TODO: revisit when there is defaulting from k/k
                                 type: string
                             type: object
                           kind:
@@ -905,14 +898,11 @@ spec:
                           UseExperimentalRetryJoin replaces a basic kubeadm command with a shell
                           script with retries for joins.
 
-
                           This is meant to be an experimental temporary workaround on some environments
                           where joins fail due to timing (and other issues). The long term goal is to add retries to
                           kubeadm proper and use that functionality.
 
-
                           This will add about 40KB to userdata
-
 
                           For more information, refer to https://github.com/kubernetes-sigs/cluster-api/pull/2763#discussion_r397306055.
                         type: boolean
@@ -995,7 +985,6 @@ spec:
         description: |-
           KubeadmConfigTemplate is the Schema for the kubeadmconfigtemplates API.
 
-
           Deprecated: This type will be removed in one of the next releases.
         properties:
           apiVersion:
@@ -1045,7 +1034,6 @@ spec:
                                   type: string
                                 description: |-
                                   ExtraArgs is an extra set of flags to pass to the control plane component.
-                                  TODO: This is temporary and ideally we would like to switch all components to
                                   use ComponentConfig + ConfigMaps.
                                 type: object
                               extraVolumes:
@@ -1126,7 +1114,6 @@ spec:
                                   type: string
                                 description: |-
                                   ExtraArgs is an extra set of flags to pass to the control plane component.
-                                  TODO: This is temporary and ideally we would like to switch all components to
                                   use ComponentConfig + ConfigMaps.
                                 type: object
                               extraVolumes:
@@ -1314,7 +1301,6 @@ spec:
                                   type: string
                                 description: |-
                                   ExtraArgs is an extra set of flags to pass to the control plane component.
-                                  TODO: This is temporary and ideally we would like to switch all components to
                                   use ComponentConfig + ConfigMaps.
                                 type: object
                               extraVolumes:
@@ -1670,7 +1656,6 @@ spec:
                               CACertPath is the path to the SSL certificate authority used to
                               secure comunications between node and control-plane.
                               Defaults to "/etc/kubernetes/pki/ca.crt".
-                              TODO: revisit when there is defaulting from k/k
                             type: string
                           controlPlane:
                             description: |-
@@ -1695,9 +1680,8 @@ spec:
                                 type: object
                             type: object
                           discovery:
-                            description: |-
-                              Discovery specifies the options for the kubelet to use during the TLS Bootstrap process
-                              TODO: revisit when there is defaulting from k/k
+                            description: Discovery specifies the options for the kubelet
+                              to use during the TLS Bootstrap process
                             properties:
                               bootstrapToken:
                                 description: |-
@@ -1875,14 +1859,11 @@ spec:
                           UseExperimentalRetryJoin replaces a basic kubeadm command with a shell
                           script with retries for joins.
 
-
                           This is meant to be an experimental temporary workaround on some environments
                           where joins fail due to timing (and other issues). The long term goal is to add retries to
                           kubeadm proper and use that functionality.
 
-
                           This will add about 40KB to userdata
-
 
                           For more information, refer to https://github.com/kubernetes-sigs/cluster-api/pull/2763#discussion_r397306055.
                         type: boolean
@@ -2036,7 +2017,6 @@ spec:
                                   type: string
                                 description: |-
                                   ExtraArgs is an extra set of flags to pass to the control plane component.
-                                  TODO: This is temporary and ideally we would like to switch all components to
                                   use ComponentConfig + ConfigMaps.
                                 type: object
                               extraVolumes:
@@ -2117,7 +2097,6 @@ spec:
                                   type: string
                                 description: |-
                                   ExtraArgs is an extra set of flags to pass to the control plane component.
-                                  TODO: This is temporary and ideally we would like to switch all components to
                                   use ComponentConfig + ConfigMaps.
                                 type: object
                               extraVolumes:
@@ -2312,7 +2291,6 @@ spec:
                                   type: string
                                 description: |-
                                   ExtraArgs is an extra set of flags to pass to the control plane component.
-                                  TODO: This is temporary and ideally we would like to switch all components to
                                   use ComponentConfig + ConfigMaps.
                                 type: object
                               extraVolumes:
@@ -2513,7 +2491,6 @@ spec:
                                 description: |-
                                   AdditionalConfig contains additional configuration to be merged with the Ignition
                                   configuration generated by the bootstrapper controller. More info: https://coreos.github.io/ignition/operator-notes/#config-merging
-
 
                                   The data format is documented here: https://kinvolk.io/docs/flatcar-container-linux/latest/provisioning/cl-config/
                                 type: string
@@ -2734,7 +2711,6 @@ spec:
                               CACertPath is the path to the SSL certificate authority used to
                               secure comunications between node and control-plane.
                               Defaults to "/etc/kubernetes/pki/ca.crt".
-                              TODO: revisit when there is defaulting from k/k
                             type: string
                           controlPlane:
                             description: |-
@@ -2759,9 +2735,8 @@ spec:
                                 type: object
                             type: object
                           discovery:
-                            description: |-
-                              Discovery specifies the options for the kubelet to use during the TLS Bootstrap process
-                              TODO: revisit when there is defaulting from k/k
+                            description: Discovery specifies the options for the kubelet
+                              to use during the TLS Bootstrap process
                             properties:
                               bootstrapToken:
                                 description: |-
@@ -2978,17 +2953,13 @@ spec:
                           UseExperimentalRetryJoin replaces a basic kubeadm command with a shell
                           script with retries for joins.
 
-
                           This is meant to be an experimental temporary workaround on some environments
                           where joins fail due to timing (and other issues). The long term goal is to add retries to
                           kubeadm proper and use that functionality.
 
-
                           This will add about 40KB to userdata
 
-
                           For more information, refer to https://github.com/kubernetes-sigs/cluster-api/pull/2763#discussion_r397306055.
-
 
                           Deprecated: This experimental fix is no longer needed and this field will be removed in a future release.
                           When removing also remove from staticcheck exclude-rules for SA1019 in golangci.yml
