--- a/config/crd/bases/cluster.x-k8s.io_clusterclasses.yaml
+++ b/config/crd/bases/cluster.x-k8s.io_clusterclasses.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.15.0
+    controller-gen.kubebuilder.io/version: v0.15.1-0.20240618033008-7824932b0cab
   name: clusterclasses.cluster.x-k8s.io
 spec:
   group: cluster.x-k8s.io
@@ -29,7 +29,6 @@ spec:
       openAPIV3Schema:
         description: |-
           ClusterClass is a template which can be used to create managed topologies.
-
 
           Deprecated: This type will be removed in one of the next releases.
         properties:
@@ -63,7 +62,6 @@ spec:
                       MachineTemplate defines the metadata and infrastructure information
                       for control plane machines.
 
-
                       This field is supported if and only if the control plane provider template
                       referenced above is Machine based and supports setting replicas.
                     properties:
@@ -84,7 +82,6 @@ spec:
                               the event) or if no container name is specified "spec.containers[2]" (container with
                               index 2 in this pod). This syntax is chosen only to have some well-defined way of
                               referencing a part of an object.
-                              TODO: this design is not final and this field is subject to change in the future.
                             type: string
                           kind:
                             description: |-
@@ -120,7 +117,6 @@ spec:
                     description: |-
                       Metadata is the metadata applied to the machines of the ControlPlane.
                       At runtime this metadata is merged with the corresponding metadata from the topology.
-
 
                       This field is supported if and only if the control plane provider template
                       referenced is Machine based.
@@ -161,7 +157,6 @@ spec:
                           the event) or if no container name is specified "spec.containers[2]" (container with
                           index 2 in this pod). This syntax is chosen only to have some well-defined way of
                           referencing a part of an object.
-                          TODO: this design is not final and this field is subject to change in the future.
                         type: string
                       kind:
                         description: |-
@@ -218,7 +213,6 @@ spec:
                           the event) or if no container name is specified "spec.containers[2]" (container with
                           index 2 in this pod). This syntax is chosen only to have some well-defined way of
                           referencing a part of an object.
-                          TODO: this design is not final and this field is subject to change in the future.
                         type: string
                       kind:
                         description: |-
@@ -298,7 +292,6 @@ spec:
                                         the event) or if no container name is specified "spec.containers[2]" (container with
                                         index 2 in this pod). This syntax is chosen only to have some well-defined way of
                                         referencing a part of an object.
-                                        TODO: this design is not final and this field is subject to change in the future.
                                       type: string
                                     kind:
                                       description: |-
@@ -352,7 +345,6 @@ spec:
                                         the event) or if no container name is specified "spec.containers[2]" (container with
                                         index 2 in this pod). This syntax is chosen only to have some well-defined way of
                                         referencing a part of an object.
-                                        TODO: this design is not final and this field is subject to change in the future.
                                       type: string
                                     kind:
                                       description: |-
@@ -479,13 +471,11 @@ spec:
                           to consider a Machine unhealthy if a corresponding Node isn't associated
                           through a `Spec.ProviderID` field.
 
-
                           The duration set in this field is compared to the greatest of:
                           - Cluster's infrastructure ready condition timestamp (if and when available)
                           - Control Plane's initialized condition timestamp (if and when available)
                           - Machine's infrastructure ready condition timestamp (if and when available)
                           - Machine's metadata creation timestamp
-
 
                           Defaults to 10 minutes.
                           If you wish to disable this feature, set the value explicitly to 0.
@@ -494,7 +484,6 @@ spec:
                         description: |-
                           RemediationTemplate is a reference to a remediation template
                           provided by an infrastructure provider.
-
 
                           This field is completely optional, when filled, the MachineHealthCheck controller
                           creates a new object from the template referenced and hands off remediation of the machine to
@@ -512,7 +501,6 @@ spec:
                               the event) or if no container name is specified "spec.containers[2]" (container with
                               index 2 in this pod). This syntax is chosen only to have some well-defined way of
                               referencing a part of an object.
-                              TODO: this design is not final and this field is subject to change in the future.
                             type: string
                           kind:
                             description: |-
@@ -581,7 +569,6 @@ spec:
                       MachineInfrastructure defines the metadata and infrastructure information
                       for control plane machines.
 
-
                       This field is supported if and only if the control plane provider template
                       referenced above is Machine based and supports setting replicas.
                     properties:
@@ -602,7 +589,6 @@ spec:
                               the event) or if no container name is specified "spec.containers[2]" (container with
                               index 2 in this pod). This syntax is chosen only to have some well-defined way of
                               referencing a part of an object.
-                              TODO: this design is not final and this field is subject to change in the future.
                             type: string
                           kind:
                             description: |-
@@ -640,7 +626,6 @@ spec:
                       if the ControlPlaneTemplate referenced is machine based. If not, it is applied only to the
                       ControlPlane.
                       At runtime this metadata is merged with the corresponding metadata from the topology.
-
 
                       This field is supported if and only if the control plane provider template
                       referenced is Machine based.
@@ -716,7 +701,6 @@ spec:
                           the event) or if no container name is specified "spec.containers[2]" (container with
                           index 2 in this pod). This syntax is chosen only to have some well-defined way of
                           referencing a part of an object.
-                          TODO: this design is not final and this field is subject to change in the future.
                         type: string
                       kind:
                         description: |-
@@ -773,7 +757,6 @@ spec:
                           the event) or if no container name is specified "spec.containers[2]" (container with
                           index 2 in this pod). This syntax is chosen only to have some well-defined way of
                           referencing a part of an object.
-                          TODO: this design is not final and this field is subject to change in the future.
                         type: string
                       kind:
                         description: |-
@@ -1215,13 +1198,11 @@ spec:
                                 to consider a Machine unhealthy if a corresponding Node isn't associated
                                 through a `Spec.ProviderID` field.
 
-
                                 The duration set in this field is compared to the greatest of:
                                 - Cluster's infrastructure ready condition timestamp (if and when available)
                                 - Control Plane's initialized condition timestamp (if and when available)
                                 - Machine's infrastructure ready condition timestamp (if and when available)
                                 - Machine's metadata creation timestamp
-
 
                                 Defaults to 10 minutes.
                                 If you wish to disable this feature, set the value explicitly to 0.
@@ -1230,7 +1211,6 @@ spec:
                               description: |-
                                 RemediationTemplate is a reference to a remediation template
                                 provided by an infrastructure provider.
-
 
                                 This field is completely optional, when filled, the MachineHealthCheck controller
                                 creates a new object from the template referenced and hands off remediation of the machine to
@@ -1248,7 +1228,6 @@ spec:
                                     the event) or if no container name is specified "spec.containers[2]" (container with
                                     index 2 in this pod). This syntax is chosen only to have some well-defined way of
                                     referencing a part of an object.
-                                    TODO: this design is not final and this field is subject to change in the future.
                                   type: string
                                 kind:
                                   description: |-
@@ -1375,19 +1354,15 @@ spec:
                                   description: |-
                                     MaxInFlight determines how many in flight remediations should happen at the same time.
 
-
                                     Remediation only happens on the MachineSet with the most current revision, while
                                     older MachineSets (usually present during rollout operations) aren't allowed to remediate.
-
 
                                     Note: In general (independent of remediations), unhealthy machines are always
                                     prioritized during scale down operations over healthy ones.
 
-
                                     MaxInFlight can be set to a fixed number or a percentage.
                                     Example: when this is set to 20%, the MachineSet controller deletes at most 20% of
                                     the desired replicas.
-
 
                                     If not set, remediation is limited to all machines (bounded by replicas)
                                     under the active MachineSet's management.
@@ -1482,7 +1457,6 @@ spec:
                                         the event) or if no container name is specified "spec.containers[2]" (container with
                                         index 2 in this pod). This syntax is chosen only to have some well-defined way of
                                         referencing a part of an object.
-                                        TODO: this design is not final and this field is subject to change in the future.
                                       type: string
                                     kind:
                                       description: |-
@@ -1536,7 +1510,6 @@ spec:
                                         the event) or if no container name is specified "spec.containers[2]" (container with
                                         index 2 in this pod). This syntax is chosen only to have some well-defined way of
                                         referencing a part of an object.
-                                        TODO: this design is not final and this field is subject to change in the future.
                                       type: string
                                     kind:
                                       description: |-
@@ -1696,7 +1669,6 @@ spec:
                                         the event) or if no container name is specified "spec.containers[2]" (container with
                                         index 2 in this pod). This syntax is chosen only to have some well-defined way of
                                         referencing a part of an object.
-                                        TODO: this design is not final and this field is subject to change in the future.
                                       type: string
                                     kind:
                                       description: |-
@@ -1750,7 +1722,6 @@ spec:
                                         the event) or if no container name is specified "spec.containers[2]" (container with
                                         index 2 in this pod). This syntax is chosen only to have some well-defined way of
                                         referencing a part of an object.
-                                        TODO: this design is not final and this field is subject to change in the future.
                                       type: string
                                     kind:
                                       description: |-
