--- a/config/crd/bases/cluster.x-k8s.io_machinedeployments.yaml
+++ b/config/crd/bases/cluster.x-k8s.io_machinedeployments.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.15.0
+    controller-gen.kubebuilder.io/version: v0.15.1-0.20240618033008-7824932b0cab
   name: machinedeployments.cluster.x-k8s.io
 spec:
   group: cluster.x-k8s.io
@@ -46,7 +46,6 @@ spec:
       openAPIV3Schema:
         description: |-
           MachineDeployment is the Schema for the machinedeployments API.
-
 
           Deprecated: This type will be removed in one of the next releases.
         properties:
@@ -239,16 +238,13 @@ spec:
                           and may be truncated by the length of the suffix required to make the value
                           unique on the server.
 
-
                           If this field is specified and the generated name exists, the server will
                           NOT return a 409 - instead, it will either return 201 Created or 500 with Reason
                           ServerTimeout indicating a unique name could not be found in the time allotted, and the client
                           should retry (optionally after the time indicated in the Retry-After header).
 
-
                           Applied only if Name is not specified.
                           More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency
-
 
                           Deprecated: This field has no function and is going to be removed in a next release.
                         type: string
@@ -270,7 +266,6 @@ spec:
                           Cannot be updated.
                           More info: http://kubernetes.io/docs/user-guide/identifiers#names
 
-
                           Deprecated: This field has no function and is going to be removed in a next release.
                         type: string
                       namespace:
@@ -280,11 +275,9 @@ spec:
                           Not all objects are required to be scoped to a namespace - the value of this field for
                           those objects will be empty.
 
-
                           Must be a DNS_LABEL.
                           Cannot be updated.
                           More info: http://kubernetes.io/docs/user-guide/namespaces
-
 
                           Deprecated: This field has no function and is going to be removed in a next release.
                         type: string
@@ -294,7 +287,6 @@ spec:
                           been deleted, this object will be garbage collected. If this object is managed by a controller,
                           then an entry in this list will point to this controller, with the controller field set to true.
                           There cannot be more than one managing controller.
-
 
                           Deprecated: This field has no function and is going to be removed in a next release.
                         items:
@@ -374,7 +366,6 @@ spec:
                                   the event) or if no container name is specified "spec.containers[2]" (container with
                                   index 2 in this pod). This syntax is chosen only to have some well-defined way of
                                   referencing a part of an object.
-                                  TODO: this design is not final and this field is subject to change in the future.
                                 type: string
                               kind:
                                 description: |-
@@ -407,7 +398,6 @@ spec:
                             description: |-
                               Data contains the bootstrap data, such as cloud-init details scripts.
                               If nil, the Machine should remain in the Pending state.
-
 
                               Deprecated: Switch to DataSecretName.
                             type: string
@@ -444,7 +434,6 @@ spec:
                               the event) or if no container name is specified "spec.containers[2]" (container with
                               index 2 in this pod). This syntax is chosen only to have some well-defined way of
                               referencing a part of an object.
-                              TODO: this design is not final and this field is subject to change in the future.
                             type: string
                           kind:
                             description: |-
@@ -602,7 +591,6 @@ spec:
       openAPIV3Schema:
         description: |-
           MachineDeployment is the Schema for the machinedeployments API.
-
 
           Deprecated: This type will be removed in one of the next releases.
         properties:
@@ -837,7 +825,6 @@ spec:
                                   the event) or if no container name is specified "spec.containers[2]" (container with
                                   index 2 in this pod). This syntax is chosen only to have some well-defined way of
                                   referencing a part of an object.
-                                  TODO: this design is not final and this field is subject to change in the future.
                                 type: string
                               kind:
                                 description: |-
@@ -899,7 +886,6 @@ spec:
                               the event) or if no container name is specified "spec.containers[2]" (container with
                               index 2 in this pod). This syntax is chosen only to have some well-defined way of
                               referencing a part of an object.
-                              TODO: this design is not final and this field is subject to change in the future.
                             type: string
                           kind:
                             description: |-
@@ -1012,6 +998,7 @@ spec:
                         can be useful (see .node.status.conditions), the ability to deconflict is important.
                       type: string
                   required:
+                  - lastTransitionTime
                   - status
                   - type
                   type: object
@@ -1157,7 +1144,6 @@ spec:
                   Number of desired machines.
                   This is a pointer to distinguish between explicit zero and not specified.
 
-
                   Defaults to:
                   * if the Kubernetes autoscaler min size and max size annotations are set:
                     - if it's a new MachineDeployment, use min size
@@ -1257,19 +1243,15 @@ spec:
                         description: |-
                           MaxInFlight determines how many in flight remediations should happen at the same time.
 
-
                           Remediation only happens on the MachineSet with the most current revision, while
                           older MachineSets (usually present during rollout operations) aren't allowed to remediate.
-
 
                           Note: In general (independent of remediations), unhealthy machines are always
                           prioritized during scale down operations over healthy ones.
 
-
                           MaxInFlight can be set to a fixed number or a percentage.
                           Example: when this is set to 20%, the MachineSet controller deletes at most 20% of
                           the desired replicas.
-
 
                           If not set, remediation is limited to all machines (bounded by replicas)
                           under the active MachineSet's management.
@@ -1393,7 +1375,6 @@ spec:
                                   the event) or if no container name is specified "spec.containers[2]" (container with
                                   index 2 in this pod). This syntax is chosen only to have some well-defined way of
                                   referencing a part of an object.
-                                  TODO: this design is not final and this field is subject to change in the future.
                                 type: string
                               kind:
                                 description: |-
@@ -1455,7 +1436,6 @@ spec:
                               the event) or if no container name is specified "spec.containers[2]" (container with
                               index 2 in this pod). This syntax is chosen only to have some well-defined way of
                               referencing a part of an object.
-                              TODO: this design is not final and this field is subject to change in the future.
                             type: string
                           kind:
                             description: |-
