--- a/config/crd/bases/cluster.x-k8s.io_machinesets.yaml
+++ b/config/crd/bases/cluster.x-k8s.io_machinesets.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.15.0
+    controller-gen.kubebuilder.io/version: v0.15.1-0.20240618033008-7824932b0cab
   name: machinesets.cluster.x-k8s.io
 spec:
   group: cluster.x-k8s.io
@@ -37,7 +37,6 @@ spec:
       openAPIV3Schema:
         description: |-
           MachineSet is the Schema for the machinesets API.
-
 
           Deprecated: This type will be removed in one of the next releases.
         properties:
@@ -168,16 +167,13 @@ spec:
                           and may be truncated by the length of the suffix required to make the value
                           unique on the server.
 
-
                           If this field is specified and the generated name exists, the server will
                           NOT return a 409 - instead, it will either return 201 Created or 500 with Reason
                           ServerTimeout indicating a unique name could not be found in the time allotted, and the client
                           should retry (optionally after the time indicated in the Retry-After header).
 
-
                           Applied only if Name is not specified.
                           More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency
-
 
                           Deprecated: This field has no function and is going to be removed in a next release.
                         type: string
@@ -199,7 +195,6 @@ spec:
                           Cannot be updated.
                           More info: http://kubernetes.io/docs/user-guide/identifiers#names
 
-
                           Deprecated: This field has no function and is going to be removed in a next release.
                         type: string
                       namespace:
@@ -209,11 +204,9 @@ spec:
                           Not all objects are required to be scoped to a namespace - the value of this field for
                           those objects will be empty.
 
-
                           Must be a DNS_LABEL.
                           Cannot be updated.
                           More info: http://kubernetes.io/docs/user-guide/namespaces
-
 
                           Deprecated: This field has no function and is going to be removed in a next release.
                         type: string
@@ -223,7 +216,6 @@ spec:
                           been deleted, this object will be garbage collected. If this object is managed by a controller,
                           then an entry in this list will point to this controller, with the controller field set to true.
                           There cannot be more than one managing controller.
-
 
                           Deprecated: This field has no function and is going to be removed in a next release.
                         items:
@@ -303,7 +295,6 @@ spec:
                                   the event) or if no container name is specified "spec.containers[2]" (container with
                                   index 2 in this pod). This syntax is chosen only to have some well-defined way of
                                   referencing a part of an object.
-                                  TODO: this design is not final and this field is subject to change in the future.
                                 type: string
                               kind:
                                 description: |-
@@ -336,7 +327,6 @@ spec:
                             description: |-
                               Data contains the bootstrap data, such as cloud-init details scripts.
                               If nil, the Machine should remain in the Pending state.
-
 
                               Deprecated: Switch to DataSecretName.
                             type: string
@@ -373,7 +363,6 @@ spec:
                               the event) or if no container name is specified "spec.containers[2]" (container with
                               index 2 in this pod). This syntax is chosen only to have some well-defined way of
                               referencing a part of an object.
-                              TODO: this design is not final and this field is subject to change in the future.
                             type: string
                           kind:
                             description: |-
@@ -454,7 +443,6 @@ spec:
                   interpretation, while FailureMessage will contain a more verbose
                   string suitable for logging and human consumption.
 
-
                   These fields should not be set for transitive errors that a
                   controller faces that are expected to be fixed automatically over
                   time (like service outages), but instead indicate that something is
@@ -463,7 +451,6 @@ spec:
                   of terminal errors would be invalid combinations of settings in the
                   spec, values that are unsupported by the machine controller, or the
                   responsible machine controller itself being critically misconfigured.
-
 
                   Any transient errors that occur during the reconciliation of Machines
                   can be added as events to the MachineSet object and/or logged in the
@@ -531,7 +518,6 @@ spec:
       openAPIV3Schema:
         description: |-
           MachineSet is the Schema for the machinesets API.
-
 
           Deprecated: This type will be removed in one of the next releases.
         properties:
@@ -692,7 +678,6 @@ spec:
                                   the event) or if no container name is specified "spec.containers[2]" (container with
                                   index 2 in this pod). This syntax is chosen only to have some well-defined way of
                                   referencing a part of an object.
-                                  TODO: this design is not final and this field is subject to change in the future.
                                 type: string
                               kind:
                                 description: |-
@@ -754,7 +739,6 @@ spec:
                               the event) or if no container name is specified "spec.containers[2]" (container with
                               index 2 in this pod). This syntax is chosen only to have some well-defined way of
                               referencing a part of an object.
-                              TODO: this design is not final and this field is subject to change in the future.
                             type: string
                           kind:
                             description: |-
@@ -865,6 +849,7 @@ spec:
                         can be useful (see .node.status.conditions), the ability to deconflict is important.
                       type: string
                   required:
+                  - lastTransitionTime
                   - status
                   - type
                   type: object
@@ -879,7 +864,6 @@ spec:
                   interpretation, while FailureMessage will contain a more verbose
                   string suitable for logging and human consumption.
 
-
                   These fields should not be set for transitive errors that a
                   controller faces that are expected to be fixed automatically over
                   time (like service outages), but instead indicate that something is
@@ -888,7 +872,6 @@ spec:
                   of terminal errors would be invalid combinations of settings in the
                   spec, values that are unsupported by the machine controller, or the
                   responsible machine controller itself being critically misconfigured.
-
 
                   Any transient errors that occur during the reconciliation of Machines
                   can be added as events to the MachineSet object and/or logged in the
@@ -1008,7 +991,6 @@ spec:
                 description: |-
                   Replicas is the number of desired replicas.
                   This is a pointer to distinguish between explicit zero and unspecified.
-
 
                   Defaults to:
                   * if the Kubernetes autoscaler min size and max size annotations are set:
@@ -1135,7 +1117,6 @@ spec:
                                   the event) or if no container name is specified "spec.containers[2]" (container with
                                   index 2 in this pod). This syntax is chosen only to have some well-defined way of
                                   referencing a part of an object.
-                                  TODO: this design is not final and this field is subject to change in the future.
                                 type: string
                               kind:
                                 description: |-
@@ -1197,7 +1178,6 @@ spec:
                               the event) or if no container name is specified "spec.containers[2]" (container with
                               index 2 in this pod). This syntax is chosen only to have some well-defined way of
                               referencing a part of an object.
-                              TODO: this design is not final and this field is subject to change in the future.
                             type: string
                           kind:
                             description: |-
@@ -1334,7 +1314,6 @@ spec:
                   interpretation, while FailureMessage will contain a more verbose
                   string suitable for logging and human consumption.
 
-
                   These fields should not be set for transitive errors that a
                   controller faces that are expected to be fixed automatically over
                   time (like service outages), but instead indicate that something is
@@ -1343,7 +1322,6 @@ spec:
                   of terminal errors would be invalid combinations of settings in the
                   spec, values that are unsupported by the machine controller, or the
                   responsible machine controller itself being critically misconfigured.
-
 
                   Any transient errors that occur during the reconciliation of Machines
                   can be added as events to the MachineSet object and/or logged in the
