--- a/controlplane/kubeadm/config/crd/bases/controlplane.cluster.x-k8s.io_kubeadmcontrolplanes.yaml
+++ b/controlplane/kubeadm/config/crd/bases/controlplane.cluster.x-k8s.io_kubeadmcontrolplanes.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.15.0
+    controller-gen.kubebuilder.io/version: v0.15.1-0.20240618033008-7824932b0cab
   name: kubeadmcontrolplanes.controlplane.cluster.x-k8s.io
 spec:
   group: controlplane.cluster.x-k8s.io
@@ -57,7 +57,6 @@ spec:
         description: |-
           KubeadmControlPlane is the Schema for the KubeadmControlPlane API.
 
-
           Deprecated: This type will be removed in one of the next releases.
         properties:
           apiVersion:
@@ -97,7 +96,6 @@ spec:
                       the event) or if no container name is specified "spec.containers[2]" (container with
                       index 2 in this pod). This syntax is chosen only to have some well-defined way of
                       referencing a part of an object.
-                      TODO: this design is not final and this field is subject to change in the future.
                     type: string
                   kind:
                     description: |-
@@ -150,7 +148,6 @@ spec:
                               type: string
                             description: |-
                               ExtraArgs is an extra set of flags to pass to the control plane component.
-                              TODO: This is temporary and ideally we would like to switch all components to
                               use ComponentConfig + ConfigMaps.
                             type: object
                           extraVolumes:
@@ -230,7 +227,6 @@ spec:
                               type: string
                             description: |-
                               ExtraArgs is an extra set of flags to pass to the control plane component.
-                              TODO: This is temporary and ideally we would like to switch all components to
                               use ComponentConfig + ConfigMaps.
                             type: object
                           extraVolumes:
@@ -419,7 +415,6 @@ spec:
                               type: string
                             description: |-
                               ExtraArgs is an extra set of flags to pass to the control plane component.
-                              TODO: This is temporary and ideally we would like to switch all components to
                               use ComponentConfig + ConfigMaps.
                             type: object
                           extraVolumes:
@@ -773,7 +768,6 @@ spec:
                           CACertPath is the path to the SSL certificate authority used to
                           secure comunications between node and control-plane.
                           Defaults to "/etc/kubernetes/pki/ca.crt".
-                          TODO: revisit when there is defaulting from k/k
                         type: string
                       controlPlane:
                         description: |-
@@ -800,9 +794,8 @@ spec:
                             type: object
                         type: object
                       discovery:
-                        description: |-
-                          Discovery specifies the options for the kubelet to use during the TLS Bootstrap process
-                          TODO: revisit when there is defaulting from k/k
+                        description: Discovery specifies the options for the kubelet
+                          to use during the TLS Bootstrap process
                         properties:
                           bootstrapToken:
                             description: |-
@@ -862,7 +855,6 @@ spec:
                               TLSBootstrapToken is a token used for TLS bootstrapping.
                               If .BootstrapToken is set, this field is defaulted to .BootstrapToken.Token, but can be overridden.
                               If .File is set, this field **must be set** in case the KubeConfigFile does not contain any other authentication information
-                              TODO: revisit when there is defaulting from k/k
                             type: string
                         type: object
                       kind:
@@ -973,14 +965,11 @@ spec:
                       UseExperimentalRetryJoin replaces a basic kubeadm command with a shell
                       script with retries for joins.
 
-
                       This is meant to be an experimental temporary workaround on some environments
                       where joins fail due to timing (and other issues). The long term goal is to add retries to
                       kubeadm proper and use that functionality.
 
-
                       This will add about 40KB to userdata
-
 
                       For more information, refer to https://github.com/kubernetes-sigs/cluster-api/pull/2763#discussion_r397306055.
                     type: boolean
@@ -1144,6 +1133,7 @@ spec:
                         can be useful (see .node.status.conditions), the ability to deconflict is important.
                       type: string
                   required:
+                  - lastTransitionTime
                   - status
                   - type
                   type: object
@@ -1261,7 +1251,6 @@ spec:
         description: |-
           KubeadmControlPlane is the Schema for the KubeadmControlPlane API.
 
-
           Deprecated: This type will be removed in one of the next releases.
         properties:
           apiVersion:
@@ -1308,7 +1297,6 @@ spec:
                               type: string
                             description: |-
                               ExtraArgs is an extra set of flags to pass to the control plane component.
-                              TODO: This is temporary and ideally we would like to switch all components to
                               use ComponentConfig + ConfigMaps.
                             type: object
                           extraVolumes:
@@ -1388,7 +1376,6 @@ spec:
                               type: string
                             description: |-
                               ExtraArgs is an extra set of flags to pass to the control plane component.
-                              TODO: This is temporary and ideally we would like to switch all components to
                               use ComponentConfig + ConfigMaps.
                             type: object
                           extraVolumes:
@@ -1574,7 +1561,6 @@ spec:
                               type: string
                             description: |-
                               ExtraArgs is an extra set of flags to pass to the control plane component.
-                              TODO: This is temporary and ideally we would like to switch all components to
                               use ComponentConfig + ConfigMaps.
                             type: object
                           extraVolumes:
@@ -1927,7 +1913,6 @@ spec:
                           CACertPath is the path to the SSL certificate authority used to
                           secure comunications between node and control-plane.
                           Defaults to "/etc/kubernetes/pki/ca.crt".
-                          TODO: revisit when there is defaulting from k/k
                         type: string
                       controlPlane:
                         description: |-
@@ -1951,9 +1936,8 @@ spec:
                             type: object
                         type: object
                       discovery:
-                        description: |-
-                          Discovery specifies the options for the kubelet to use during the TLS Bootstrap process
-                          TODO: revisit when there is defaulting from k/k
+                        description: Discovery specifies the options for the kubelet
+                          to use during the TLS Bootstrap process
                         properties:
                           bootstrapToken:
                             description: |-
@@ -2129,14 +2113,11 @@ spec:
                       UseExperimentalRetryJoin replaces a basic kubeadm command with a shell
                       script with retries for joins.
 
-
                       This is meant to be an experimental temporary workaround on some environments
                       where joins fail due to timing (and other issues). The long term goal is to add retries to
                       kubeadm proper and use that functionality.
 
-
                       This will add about 40KB to userdata
-
 
                       For more information, refer to https://github.com/kubernetes-sigs/cluster-api/pull/2763#discussion_r397306055.
                     type: boolean
@@ -2221,7 +2202,6 @@ spec:
                           the event) or if no container name is specified "spec.containers[2]" (container with
                           index 2 in this pod). This syntax is chosen only to have some well-defined way of
                           referencing a part of an object.
-                          TODO: this design is not final and this field is subject to change in the future.
                         type: string
                       kind:
                         description: |-
@@ -2382,6 +2362,7 @@ spec:
                         can be useful (see .node.status.conditions), the ability to deconflict is important.
                       type: string
                   required:
+                  - lastTransitionTime
                   - status
                   - type
                   type: object
@@ -2556,7 +2537,6 @@ spec:
                               type: string
                             description: |-
                               ExtraArgs is an extra set of flags to pass to the control plane component.
-                              TODO: This is temporary and ideally we would like to switch all components to
                               use ComponentConfig + ConfigMaps.
                             type: object
                           extraVolumes:
@@ -2636,7 +2616,6 @@ spec:
                               type: string
                             description: |-
                               ExtraArgs is an extra set of flags to pass to the control plane component.
-                              TODO: This is temporary and ideally we would like to switch all components to
                               use ComponentConfig + ConfigMaps.
                             type: object
                           extraVolumes:
@@ -2829,7 +2808,6 @@ spec:
                               type: string
                             description: |-
                               ExtraArgs is an extra set of flags to pass to the control plane component.
-                              TODO: This is temporary and ideally we would like to switch all components to
                               use ComponentConfig + ConfigMaps.
                             type: object
                           extraVolumes:
@@ -3026,7 +3004,6 @@ spec:
                             description: |-
                               AdditionalConfig contains additional configuration to be merged with the Ignition
                               configuration generated by the bootstrapper controller. More info: https://coreos.github.io/ignition/operator-notes/#config-merging
-
 
                               The data format is documented here: https://kinvolk.io/docs/flatcar-container-linux/latest/provisioning/cl-config/
                             type: string
@@ -3246,7 +3223,6 @@ spec:
                           CACertPath is the path to the SSL certificate authority used to
                           secure comunications between node and control-plane.
                           Defaults to "/etc/kubernetes/pki/ca.crt".
-                          TODO: revisit when there is defaulting from k/k
                         type: string
                       controlPlane:
                         description: |-
@@ -3270,9 +3246,8 @@ spec:
                             type: object
                         type: object
                       discovery:
-                        description: |-
-                          Discovery specifies the options for the kubelet to use during the TLS Bootstrap process
-                          TODO: revisit when there is defaulting from k/k
+                        description: Discovery specifies the options for the kubelet
+                          to use during the TLS Bootstrap process
                         properties:
                           bootstrapToken:
                             description: |-
@@ -3487,17 +3462,13 @@ spec:
                       UseExperimentalRetryJoin replaces a basic kubeadm command with a shell
                       script with retries for joins.
 
-
                       This is meant to be an experimental temporary workaround on some environments
                       where joins fail due to timing (and other issues). The long term goal is to add retries to
                       kubeadm proper and use that functionality.
 
-
                       This will add about 40KB to userdata
 
-
                       For more information, refer to https://github.com/kubernetes-sigs/cluster-api/pull/2763#discussion_r397306055.
-
 
                       Deprecated: This experimental fix is no longer needed and this field will be removed in a future release.
                       When removing also remove from staticcheck exclude-rules for SA1019 in golangci.yml
@@ -3606,7 +3577,6 @@ spec:
                           the event) or if no container name is specified "spec.containers[2]" (container with
                           index 2 in this pod). This syntax is chosen only to have some well-defined way of
                           referencing a part of an object.
-                          TODO: this design is not final and this field is subject to change in the future.
                         type: string
                       kind:
                         description: |-
@@ -3688,17 +3658,17 @@ spec:
                       to remediate an unhealthy machine.\nA retry happens when a machine
                       that was created as a replacement for an unhealthy machine also
                       fails.\nFor example, given a control plane with three machines
-                      M1, M2, M3:\n\n\n\tM1 become unhealthy; remediation happens,
-                      and M1-1 is created as a replacement.\n\tIf M1-1 (replacement
-                      of M1) has problems while bootstrapping it will become unhealthy,
+                      M1, M2, M3:\n\n\tM1 become unhealthy; remediation happens, and
+                      M1-1 is created as a replacement.\n\tIf M1-1 (replacement of
+                      M1) has problems while bootstrapping it will become unhealthy,
                       and then be\n\tremediated; such operation is considered a retry,
                       remediation-retry #1.\n\tIf M1-2 (replacement of M1-1) becomes
-                      unhealthy, remediation-retry #2 will happen, etc.\n\n\nA retry
+                      unhealthy, remediation-retry #2 will happen, etc.\n\nA retry
                       could happen only after RetryPeriod from the previous retry.\nIf
                       a machine is marked as unhealthy after MinHealthyPeriod from
                       the previous remediation expired,\nthis is not considered a
                       retry anymore because the new issue is assumed unrelated from
-                      the previous one.\n\n\nIf not set, the remedation will be retried
+                      the previous one.\n\nIf not set, the remedation will be retried
                       infinitely."
                     format: int32
                     type: integer
@@ -3707,23 +3677,22 @@ spec:
                       KCP will consider any failure to a machine unrelated\nfrom the
                       previous one. In this case the remediation is not considered
                       a retry anymore, and thus the retry\ncounter restarts from 0.
-                      For example, assuming MinHealthyPeriod is set to 1h (default)\n\n\n\tM1
+                      For example, assuming MinHealthyPeriod is set to 1h (default)\n\n\tM1
                       become unhealthy; remediation happens, and M1-1 is created as
                       a replacement.\n\tIf M1-1 (replacement of M1) has problems within
                       the 1hr after the creation, also\n\tthis machine will be remediated
                       and this operation is considered a retry - a problem related\n\tto
-                      the original issue happened to M1 -.\n\n\n\tIf instead the problem
+                      the original issue happened to M1 -.\n\n\tIf instead the problem
                       on M1-1 is happening after MinHealthyPeriod expired, e.g. four
                       days after\n\tm1-1 has been created as a remediation of M1,
                       the problem on M1-1 is considered unrelated to\n\tthe original
-                      issue happened to M1.\n\n\nIf not set, this value is defaulted
+                      issue happened to M1.\n\nIf not set, this value is defaulted
                       to 1h."
                     type: string
                   retryPeriod:
                     description: |-
                       RetryPeriod is the duration that KCP should wait before remediating a machine being created as a replacement
                       for an unhealthy machine (a retry).
-
 
                       If not set, a retry will happen immediately.
                     type: string
