--- a/bootstrap/kubeadm/config/crd/bases/bootstrap.cluster.x-k8s.io_kubeadmconfigs.yaml
+++ b/bootstrap/kubeadm/config/crd/bases/bootstrap.cluster.x-k8s.io_kubeadmconfigs.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.15.0
+    controller-gen.kubebuilder.io/version: v0.15.1-0.20240618033008-7824932b0cab
   name: kubeadmconfigs.bootstrap.cluster.x-k8s.io
 spec:
   group: bootstrap.cluster.x-k8s.io
@@ -22,7 +22,6 @@ spec:
       openAPIV3Schema:
         description: |-
           KubeadmConfig is the Schema for the kubeadmconfigs API.
-
 
           Deprecated: This type will be removed in one of the next releases.
         properties:
@@ -67,7 +66,6 @@ spec:
                           type: string
                         description: |-
                           ExtraArgs is an extra set of flags to pass to the control plane component.
-                          TODO: This is temporary and ideally we would like to switch all components to
                           use ComponentConfig + ConfigMaps.
                         type: object
                       extraVolumes:
@@ -146,7 +144,6 @@ spec:
                           type: string
                         description: |-
                           ExtraArgs is an extra set of flags to pass to the control plane component.
-                          TODO: This is temporary and ideally we would like to switch all components to
                           use ComponentConfig + ConfigMaps.
                         type: object
                       extraVolumes:
@@ -333,7 +330,6 @@ spec:
                           type: string
                         description: |-
                           ExtraArgs is an extra set of flags to pass to the control plane component.
-                          TODO: This is temporary and ideally we would like to switch all components to
                           use ComponentConfig + ConfigMaps.
                         type: object
                       extraVolumes:
@@ -682,7 +678,6 @@ spec:
                       CACertPath is the path to the SSL certificate authority used to
                       secure comunications between node and control-plane.
                       Defaults to "/etc/kubernetes/pki/ca.crt".
-                      TODO: revisit when there is defaulting from k/k
                     type: string
                   controlPlane:
                     description: |-
@@ -709,9 +704,8 @@ spec:
                         type: object
                     type: object
                   discovery:
-                    description: |-
-                      Discovery specifies the options for the kubelet to use during the TLS Bootstrap process
-                      TODO: revisit when there is defaulting from k/k
+                    description: Discovery specifies the options for the kubelet to
+                      use during the TLS Bootstrap process
                     properties:
                       bootstrapToken:
                         description: |-
@@ -771,7 +765,6 @@ spec:
                           TLSBootstrapToken is a token used for TLS bootstrapping.
                           If .BootstrapToken is set, this field is defaulted to .BootstrapToken.Token, but can be overridden.
                           If .File is set, this field **must be set** in case the KubeConfigFile does not contain any other authentication information
-                          TODO: revisit when there is defaulting from k/k
                         type: string
                     type: object
                   kind:
@@ -881,14 +874,11 @@ spec:
                   UseExperimentalRetryJoin replaces a basic kubeadm command with a shell
                   script with retries for joins.
 
-
                   This is meant to be an experimental temporary workaround on some environments
                   where joins fail due to timing (and other issues). The long term goal is to add retries to
                   kubeadm proper and use that functionality.
 
-
                   This will add about 40KB to userdata
-
 
                   For more information, refer to https://github.com/kubernetes-sigs/cluster-api/pull/2763#discussion_r397306055.
                 type: boolean
@@ -956,7 +946,6 @@ spec:
                 description: |-
                   BootstrapData will be a cloud-init script for now.
 
-
                   Deprecated: Switch to DataSecretName.
                 format: byte
                 type: string
@@ -1000,6 +989,7 @@ spec:
                         can be useful (see .node.status.conditions), the ability to deconflict is important.
                       type: string
                   required:
+                  - lastTransitionTime
                   - status
                   - type
                   type: object
@@ -1040,7 +1030,6 @@ spec:
       openAPIV3Schema:
         description: |-
           KubeadmConfig is the Schema for the kubeadmconfigs API.
-
 
           Deprecated: This type will be removed in one of the next releases.
         properties:
@@ -1085,7 +1074,6 @@ spec:
                           type: string
                         description: |-
                           ExtraArgs is an extra set of flags to pass to the control plane component.
-                          TODO: This is temporary and ideally we would like to switch all components to
                           use ComponentConfig + ConfigMaps.
                         type: object
                       extraVolumes:
@@ -1164,7 +1152,6 @@ spec:
                           type: string
                         description: |-
                           ExtraArgs is an extra set of flags to pass to the control plane component.
-                          TODO: This is temporary and ideally we would like to switch all components to
                           use ComponentConfig + ConfigMaps.
                         type: object
                       extraVolumes:
@@ -1348,7 +1335,6 @@ spec:
                           type: string
                         description: |-
                           ExtraArgs is an extra set of flags to pass to the control plane component.
-                          TODO: This is temporary and ideally we would like to switch all components to
                           use ComponentConfig + ConfigMaps.
                         type: object
                       extraVolumes:
@@ -1695,7 +1681,6 @@ spec:
                       CACertPath is the path to the SSL certificate authority used to
                       secure comunications between node and control-plane.
                       Defaults to "/etc/kubernetes/pki/ca.crt".
-                      TODO: revisit when there is defaulting from k/k
                     type: string
                   controlPlane:
                     description: |-
@@ -1719,9 +1704,8 @@ spec:
                         type: object
                     type: object
                   discovery:
-                    description: |-
-                      Discovery specifies the options for the kubelet to use during the TLS Bootstrap process
-                      TODO: revisit when there is defaulting from k/k
+                    description: Discovery specifies the options for the kubelet to
+                      use during the TLS Bootstrap process
                     properties:
                       bootstrapToken:
                         description: |-
@@ -1895,14 +1879,11 @@ spec:
                   UseExperimentalRetryJoin replaces a basic kubeadm command with a shell
                   script with retries for joins.
 
-
                   This is meant to be an experimental temporary workaround on some environments
                   where joins fail due to timing (and other issues). The long term goal is to add retries to
                   kubeadm proper and use that functionality.
 
-
                   This will add about 40KB to userdata
-
 
                   For more information, refer to https://github.com/kubernetes-sigs/cluster-api/pull/2763#discussion_r397306055.
                 type: boolean
@@ -2006,6 +1987,7 @@ spec:
                         can be useful (see .node.status.conditions), the ability to deconflict is important.
                       type: string
                   required:
+                  - lastTransitionTime
                   - status
                   - type
                   type: object
@@ -2090,7 +2072,6 @@ spec:
                           type: string
                         description: |-
                           ExtraArgs is an extra set of flags to pass to the control plane component.
-                          TODO: This is temporary and ideally we would like to switch all components to
                           use ComponentConfig + ConfigMaps.
                         type: object
                       extraVolumes:
@@ -2169,7 +2150,6 @@ spec:
                           type: string
                         description: |-
                           ExtraArgs is an extra set of flags to pass to the control plane component.
-                          TODO: This is temporary and ideally we would like to switch all components to
                           use ComponentConfig + ConfigMaps.
                         type: object
                       extraVolumes:
@@ -2360,7 +2340,6 @@ spec:
                           type: string
                         description: |-
                           ExtraArgs is an extra set of flags to pass to the control plane component.
-                          TODO: This is temporary and ideally we would like to switch all components to
                           use ComponentConfig + ConfigMaps.
                         type: object
                       extraVolumes:
@@ -2552,7 +2531,6 @@ spec:
                         description: |-
                           AdditionalConfig contains additional configuration to be merged with the Ignition
                           configuration generated by the bootstrapper controller. More info: https://coreos.github.io/ignition/operator-notes/#config-merging
-
 
                           The data format is documented here: https://kinvolk.io/docs/flatcar-container-linux/latest/provisioning/cl-config/
                         type: string
@@ -2771,7 +2749,6 @@ spec:
                       CACertPath is the path to the SSL certificate authority used to
                       secure comunications between node and control-plane.
                       Defaults to "/etc/kubernetes/pki/ca.crt".
-                      TODO: revisit when there is defaulting from k/k
                     type: string
                   controlPlane:
                     description: |-
@@ -2795,9 +2772,8 @@ spec:
                         type: object
                     type: object
                   discovery:
-                    description: |-
-                      Discovery specifies the options for the kubelet to use during the TLS Bootstrap process
-                      TODO: revisit when there is defaulting from k/k
+                    description: Discovery specifies the options for the kubelet to
+                      use during the TLS Bootstrap process
                     properties:
                       bootstrapToken:
                         description: |-
@@ -3010,17 +2986,13 @@ spec:
                   UseExperimentalRetryJoin replaces a basic kubeadm command with a shell
                   script with retries for joins.
 
-
                   This is meant to be an experimental temporary workaround on some environments
                   where joins fail due to timing (and other issues). The long term goal is to add retries to
                   kubeadm proper and use that functionality.
 
-
                   This will add about 40KB to userdata
 
-
                   For more information, refer to https://github.com/kubernetes-sigs/cluster-api/pull/2763#discussion_r397306055.
-
 
                   Deprecated: This experimental fix is no longer needed and this field will be removed in a future release.
                   When removing also remove from staticcheck exclude-rules for SA1019 in golangci.yml
