--- a/cmd/clusterctl/config/crd/bases/clusterctl.cluster.x-k8s.io_metadata.yaml
+++ b/cmd/clusterctl/config/crd/bases/clusterctl.cluster.x-k8s.io_metadata.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.15.0
+    controller-gen.kubebuilder.io/version: v0.15.1-0.20240618033008-7824932b0cab
   name: metadata.clusterctl.cluster.x-k8s.io
 spec:
   group: clusterctl.cluster.x-k8s.io
@@ -44,7 +44,6 @@ spec:
                 contract:
                   description: |-
                     Contract defines the Cluster API contract supported by this series.
-
 
                     The value is an API Version, e.g. `v1alpha3`.
                   type: string
