--- a/config/crd/bases/addons.cluster.x-k8s.io_clusterresourcesetbindings.yaml
+++ b/config/crd/bases/addons.cluster.x-k8s.io_clusterresourcesetbindings.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.15.0
+    controller-gen.kubebuilder.io/version: v0.15.1-0.20240618033008-7824932b0cab
   name: clusterresourcesetbindings.addons.cluster.x-k8s.io
 spec:
   group: addons.cluster.x-k8s.io
@@ -22,7 +22,6 @@ spec:
       openAPIV3Schema:
         description: |-
           ClusterResourceSetBinding lists all matching ClusterResourceSets with the cluster it belongs to.
-
 
           Deprecated: This type will be removed in one of the next releases.
         properties:
@@ -118,7 +117,6 @@ spec:
       openAPIV3Schema:
         description: |-
           ClusterResourceSetBinding lists all matching ClusterResourceSets with the cluster it belongs to.
-
 
           Deprecated: This type will be removed in one of the next releases.
         properties:
