--- a/config/crd/bases/addons.cluster.x-k8s.io_clusterresourcesets.yaml
+++ b/config/crd/bases/addons.cluster.x-k8s.io_clusterresourcesets.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.15.0
+    controller-gen.kubebuilder.io/version: v0.15.1-0.20240618033008-7824932b0cab
   name: clusterresourcesets.addons.cluster.x-k8s.io
 spec:
   group: addons.cluster.x-k8s.io
@@ -22,7 +22,6 @@ spec:
       openAPIV3Schema:
         description: |-
           ClusterResourceSet is the Schema for the clusterresourcesets API.
-
 
           Deprecated: This type will be removed in one of the next releases.
         properties:
@@ -170,6 +169,7 @@ spec:
                         can be useful (see .node.status.conditions), the ability to deconflict is important.
                       type: string
                   required:
+                  - lastTransitionTime
                   - status
                   - type
                   type: object
@@ -196,7 +196,6 @@ spec:
       openAPIV3Schema:
         description: |-
           ClusterResourceSet is the Schema for the clusterresourcesets API.
-
 
           Deprecated: This type will be removed in one of the next releases.
         properties:
@@ -345,6 +344,7 @@ spec:
                         can be useful (see .node.status.conditions), the ability to deconflict is important.
                       type: string
                   required:
+                  - lastTransitionTime
                   - status
                   - type
                   type: object
