--- a/test/infrastructure/docker/config/crd/bases/infrastructure.cluster.x-k8s.io_dockermachinepools.yaml
+++ b/test/infrastructure/docker/config/crd/bases/infrastructure.cluster.x-k8s.io_dockermachinepools.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.15.0
+    controller-gen.kubebuilder.io/version: v0.15.1-0.20240618033008-7824932b0cab
   name: dockermachinepools.infrastructure.cluster.x-k8s.io
 spec:
   group: infrastructure.cluster.x-k8s.io
@@ -22,7 +22,6 @@ spec:
       openAPIV3Schema:
         description: |-
           DockerMachinePool is the Schema for the dockermachinepools API.
-
 
           Deprecated: This type will be removed in one of the next releases.
         properties:
@@ -139,6 +138,7 @@ spec:
                         can be useful (see .node.status.conditions), the ability to deconflict is important.
                       type: string
                   required:
+                  - lastTransitionTime
                   - status
                   - type
                   type: object
@@ -221,7 +221,6 @@ spec:
         description: |-
           DockerMachinePool is the Schema for the dockermachinepools API.
 
-
           Deprecated: This type will be removed in one of the next releases.
         properties:
           apiVersion:
@@ -337,6 +336,7 @@ spec:
                         can be useful (see .node.status.conditions), the ability to deconflict is important.
                       type: string
                   required:
+                  - lastTransitionTime
                   - status
                   - type
                   type: object
@@ -569,7 +569,6 @@ spec:
                       description: |-
                         Bootstrapped is true when the kubeadm bootstrapping has been run
                         against this machine
-
 
                         Deprecated: This field will be removed in the next apiVersion.
                         When removing also remove from staticcheck exclude-rules for SA1019 in golangci.yml
