--- a/test/infrastructure/docker/config/crd/bases/infrastructure.cluster.x-k8s.io_dockermachines.yaml
+++ b/test/infrastructure/docker/config/crd/bases/infrastructure.cluster.x-k8s.io_dockermachines.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.15.0
+    controller-gen.kubebuilder.io/version: v0.15.1-0.20240618033008-7824932b0cab
   name: dockermachines.infrastructure.cluster.x-k8s.io
 spec:
   group: infrastructure.cluster.x-k8s.io
@@ -22,7 +22,6 @@ spec:
       openAPIV3Schema:
         description: |-
           DockerMachine is the Schema for the dockermachines API.
-
 
           Deprecated: This type will be removed in one of the next releases.
         properties:
@@ -153,6 +152,7 @@ spec:
                         can be useful (see .node.status.conditions), the ability to deconflict is important.
                       type: string
                   required:
+                  - lastTransitionTime
                   - status
                   - type
                   type: object
@@ -184,7 +184,6 @@ spec:
         description: |-
           DockerMachine is the Schema for the dockermachines API.
 
-
           Deprecated: This type will be removed in one of the next releases.
         properties:
           apiVersion:
@@ -314,6 +313,7 @@ spec:
                         can be useful (see .node.status.conditions), the ability to deconflict is important.
                       type: string
                   required:
+                  - lastTransitionTime
                   - status
                   - type
                   type: object
@@ -388,7 +388,6 @@ spec:
                 description: |-
                   Bootstrapped is true when the kubeadm bootstrapping has been run
                   against this machine
-
 
                   Deprecated: This field will be removed in the next apiVersion.
                   When removing also remove from staticcheck exclude-rules for SA1019 in golangci.yml.
