--- a/test/infrastructure/docker/config/crd/bases/infrastructure.cluster.x-k8s.io_dockermachinetemplates.yaml
+++ b/test/infrastructure/docker/config/crd/bases/infrastructure.cluster.x-k8s.io_dockermachinetemplates.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.15.0
+    controller-gen.kubebuilder.io/version: v0.15.1-0.20240618033008-7824932b0cab
   name: dockermachinetemplates.infrastructure.cluster.x-k8s.io
 spec:
   group: infrastructure.cluster.x-k8s.io
@@ -22,7 +22,6 @@ spec:
       openAPIV3Schema:
         description: |-
           DockerMachineTemplate is the Schema for the dockermachinetemplates API.
-
 
           Deprecated: This type will be removed in one of the next releases.
         properties:
@@ -119,7 +118,6 @@ spec:
       openAPIV3Schema:
         description: |-
           DockerMachineTemplate is the Schema for the dockermachinetemplates API.
-
 
           Deprecated: This type will be removed in one of the next releases.
         properties:
@@ -278,7 +276,6 @@ spec:
                         description: |-
                           Bootstrapped is true when the kubeadm bootstrapping has been run
                           against this machine
-
 
                           Deprecated: This field will be removed in the next apiVersion.
                           When removing also remove from staticcheck exclude-rules for SA1019 in golangci.yml.
